// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search> Search default 1`] = `
<div
  className="search"
  data-test="Search"
>
  <input
    aria-label="Searchfield for fiiltering food products"
    className="search__input"
    onKeyDown={[Function]}
    placeholder="e.g. ice cream"
    type="text"
  />
  <Button
    aria-label="Searchbutton for filtering food products"
    className="search__button"
    iconName="search"
    iconSize="l"
    isLoading={false}
    onClick={[Function]}
  />
</div>
`;

exports[`<Search> Search while loading 1`] = `
<div
  className="search"
  data-test="Search"
>
  <input
    aria-label="Searchfield for fiiltering food products"
    className="search__input"
    onKeyDown={[Function]}
    placeholder="e.g. ice cream"
    type="text"
  />
  <Button
    aria-label="Searchbutton for filtering food products"
    className="search__button"
    iconName="search"
    iconSize="l"
    isLoading={true}
    onClick={[Function]}
  />
</div>
`;
